--- a/index.html
+++ b/index.html
@@ -1,59 +1,92 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <title>Login Carwash</title>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <title>Login Carwash</title>
 </head>
-
 <body>
-
-    <div class="container">
-
-        <div class="logo">
-            <img src="GOclean.jpg" alt="logo del autolavado" width="500px" height="500px">
-        </div>
-
-        <div class="form-box">
-            
-            <form action="servicios.html" method="POST">
-
-                <h2>Formulario autolavado</h2>
-
-                <div class="input-box">
-                    <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
-                    <i class="bi bi-person"></i>
-                </div>
-
-                <div class="input-box">
-                    <input type="email" id="correo" name="correo" placeholder="Correo electrónico" required>
-                    <i class="bi bi-envelope-at-fill"></i>
-                </div>
-
-                <div class="input-box">
-                    <input type="password" id="contraseña" name="contraseña" placeholder="Contraseña" required>
-                    <i class="bi bi-lock-fill"></i>
-                </div>
-
-                <div class="input-box">
-                    <input type="text" id="modeloauto" name="modeloauto" placeholder="Modelo de auto" required>
-                    <i class="bi bi-car-front-fill"></i>
-                </div>
-
-                <div class="input-box">
-                    <input type="text" id="matricula" name="matricula" placeholder="Matricula" required>
-                    <i class="bi bi-card-heading"></i>
-                </div>
-
-                <button type="submit" class="boton">Enviar</button>
-
-            </form>
-        </div>
+  <div class="container">
+    <div class="logo">
+      <img src="GOclean.jpg" alt="logo del autolavado" width="500px" height="500px">
     </div>
 
-</body>
+    <div class="form-box">
+      <form id="formCliente">
+        <h2>Formulario autolavado</h2>
 
+        <div class="input-box">
+          <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
+          <i class="bi bi-person"></i>
+        </div>
+
+        <div class="input-box">
+          <input type="email" id="correo" name="correo" placeholder="Correo electrónico" required>
+          <i class="bi bi-envelope-at-fill"></i>
+        </div>
+
+        <div class="input-box">
+          <input type="text" id="modeloauto" name="modeloauto" placeholder="Modelo de auto" required>
+          <i class="bi bi-car-front-fill"></i>
+        </div>
+
+        <div class="input-box">
+          <input type="text" id="matricula" name="matricula" placeholder="Matrícula" required>
+          <i class="bi bi-card-heading"></i>
+        </div>
+
+        <button type="submit" class="boton" id="enviarBtn" disabled>Enviar</button>
+      </form>
+    </div>
+  </div>
+
+  <script>
+    // Habilitar o deshabilitar el botón según los campos
+    const inputs = document.querySelectorAll('.input-box input');
+    const enviarBtn = document.getElementById('enviarBtn');
+
+    function verificarCampos() {
+      let todosLlenos = true;
+      inputs.forEach(input => {
+        if (input.value.trim() === '') {
+          todosLlenos = false;
+        }
+      });
+      enviarBtn.disabled = !todosLlenos;
+    }
+
+    inputs.forEach(input => {
+      input.addEventListener('input', verificarCampos);
+    });
+
+    // Enviar datos por fetch y guardar ID_cliente
+    document.getElementById('formCliente').addEventListener('submit', function(event) {
+      event.preventDefault();
+
+      const formData = new FormData(this);
+
+      fetch('datos_cliente.php', {
+        method: 'POST',
+        body: formData
+      })
+      .then(response => response.text())
+      .then(id_cliente => {
+        id_cliente = id_cliente.trim();
+        console.log('ID_cliente recibido:', id_cliente);
+        if (!id_cliente || isNaN(id_cliente) || Number(id_cliente) <= 0) {
+          alert('Error: ID_cliente inválido recibido del servidor.');
+        } else {
+          localStorage.setItem('ID_cliente', id_cliente);
+          window.location.href = 'servicios.html';
+        }
+      })
+      .catch(error => {
+        console.error('Error:', error);
+        alert('Hubo un error al registrar el cliente.');
+      });
+    });
+  </script>
+</body>
 </html>
