Implementación de la página principal

--- a/pedido_confirmado.html
+++ b/pedido_confirmado.html
@@ -57,7 +57,7 @@
             <div class='message-box'>
                 <h2>¡Pedido realizado con éxito!</h2>
                 <p>Gracias por confiar en nosotros bro</p>
-                <a href='index.html'>Registrar otro auto</a>
+                <a href='registro.html'>Registrar otro auto</a>
             </div>
 
         </body>
