--- a/servicios.html
+++ b/servicios.html
@@ -242,7 +242,7 @@
     </div>
     
     <div class="botones">
-        <a href="index.html" class="btn">Volver</a>
+        <a href="registro.html" class="btn">Volver</a>
         <button class="btn" onclick="confirmar()">Confirmar</button>
     </div>
 </div>
@@ -345,6 +345,7 @@
             method: 'POST',
             body: data
         })
+        
         .then(response => response.text())
         .then(result => {
             alert(result);
