--- a/registro.html
+++ b/registro.html
@@ -3,9 +3,106 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="estilos.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <title>Login Carwash</title>
+
+<style>
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: linear-gradient(90deg, #e2e2e2, #c9d6ff) ;
+}
+
+h2{
+    padding-top: 20px;
+    color: aliceblue;
+}
+
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    width: 850px;
+    height: 500px;
+    background-image: url(fondo.jpg) no-repeat;
+    background: cover;
+    background: center;
+    border-radius: 30px;
+    overflow: hidden;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+}
+
+
+.form-box{
+    width: 50%;
+    height: 100%;
+    background: #072352;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #333;
+}
+
+
+form{
+    width: 100%;
+}
+
+.input-box{
+    position: relative;
+    margin: 30px 0;
+}
+
+.input-box i{
+    position: absolute;
+    right: 80px;
+    top: 50%;
+    font-size: 20px;
+    transform: translateY(-50%);
+}
+
+.input-box input{
+    width: 70%;
+    padding: 13px 50px 13px 20px;
+    background: #ffff;
+    border: none;
+    outline: none;
+    border: none;
+    font-size: 16px;
+    border-radius: 20px;
+    font-weight: 500;
+}
+
+.boton{
+width: 80% ;
+height: 40px;
+padding-bottom: 10;
+background: #b5c2e8 ;
+border-radius: 40px;
+border: none;
+cursor: pointer;
+color: blue;
+}
+
+.boton:disabled {
+background-color: #ccc; 
+cursor: not-allowed; 
+}
+</style>
+
 </head>
 <body>
   <div class="container">
