--- a/servicios.html
+++ b/servicios.html
@@ -192,17 +192,17 @@
             <h2>Tipo de auto</h2>
             <div class="tipos-de-auto">
                 <div onclick="seleccionarAuto('sedan', 100)">
-                    <img src="sedan.png" alt="Sedan" width="80" height="40">
+                    <img src="imagenes/sedan.png" alt="Sedan" width="80" height="40">
                     <p>SEDAN</p>
                 </div>
 
                 <div onclick="seleccionarAuto('suv', 150)">
-                    <img src="suv.png" alt="SUV" width="80" height="40">
+                    <img src="imagenes/suv.png" alt="SUV" width="80" height="40">
                     <p>SUV</p>
                 </div>
 
                 <div onclick="seleccionarAuto('camioneta', 200)">
-                    <img src="camioneta.png" alt="Camioneta" width="80" height="40">
+                    <img src="imagenes/camioneta.png" alt="Camioneta" width="80" height="40">
                     <p>CAMIONETA</p>
                 </div>
             </div>
