--- a/pedido_confirmado.html
+++ b/pedido_confirmado.html
@@ -58,6 +58,7 @@
                 <h2>¡Pedido realizado con éxito!</h2>
                 <p>Gracias por confiar en nosotros bro</p>
                 <a href='registro.html'>Registrar otro auto</a>
+                <a href='pedidos.php'>Ver pedidos</a>
             </div>
 
         </body>
